<resources>
    <string name="app_name">SHOESYOURSELF</string>
    <string name="btn_start_text">GET STARTED</string>
    <string name="add_cart_text">Add</string>
    <string name="remove_cart_text">Remove</string>
    <string name="edit_product_text">Edit</string>
    <string name="delete_product_text">Delete</string>
    <string name="setting_text">Options</string>
    <string name="product_option_text">PRODUCT OPTIONS</string>
    <string name="add_product_text">ADD</string>
    <string name="brand_text"> All Brands </string>
    <string name="cart_fragment_title">CART LIST </string>
    <string name="cart_empty_text">Your shopping cart is empty</string>
    <string name="edit_quantity_item_text">(Swipe left to delete item)</string>
    <string name="cart_total_text">TOTAL: %1$s $</string>
    <string name="cart_price_quantity_text">%1$s * %2$s</string>
    <string name="save_order_text">Save your order</string>
    <string name="product_action_text">Product (%1$s) </string>
    <string name="product_btn_add_text"> Add </string>
    <string name="product_btn_update_text"> Update </string>
    <string name="product_btn_cancel_text"> Cancel </string>


    <string name="product_url">products/%1$s</string>
    <string name="product_price_text">%1$s $</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
