<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/btn_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_option_text"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btn_edit_setting"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_edit"
        android:drawableLeft="@drawable/ic_edit"
        android:text="@string/edit_product_text" />

    <Button
        android:id="@+id/btn_delete_setting"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_delete"
        android:drawableLeft="@drawable/ic_delete"
        android:text="@string/delete_product_text" />

    <Button
        android:id="@+id/btn_close_alert_dialog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@drawable/ic_cancel" />

</LinearLayout>