<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.Cart">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cart_fragment_title"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic" />

    <ListView
        android:id="@+id/lv_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85" />

    <TextView
        android:id="@+id/tv_total_cart"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_weight="7"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cart_total_text"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btn_save_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/btn_bg"
        android:text="@string/save_order_text" />
</LinearLayout>